--- a/templates/sentiment_analysis.html
+++ b/templates/sentiment_analysis.html
@@ -48,7 +48,7 @@
         {% if prediction == 1 %}
         <h2 style="color: green">Positive Comment!</h2>
         {% else %}
-        <h2 style="color: red">Negative Comment</h2>
+        <h2 style="color: red">Negative Comment!</h2>
         {% endif %}
         {% endif %}
         <!-- <p id="display"></p> -->
