--- a/templates/sentiment_analysis.html
+++ b/templates/sentiment_analysis.html
@@ -22,9 +22,7 @@
     <h1>Customer's Sentiment Analysis</h1>
     <div>
         <form method="POST" action="/predict">
-            <textarea name="review_text" placeholder="Type Or Paste Any Review Text Here." rows="20" cols="80" autocomplete="off">
-                {{ text }}
-            </textarea>
+            <textarea name="review_text" placeholder="Type Or Paste Any Review Text Here." rows="20" cols="80" autocomplete="off">{{ text }}</textarea>
             <div>
                 <button type = "Submit">
                     Submit
